--- a/bitcamp-project-client/app/build.gradle
+++ b/bitcamp-project-client/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
+    
+    implementation 'org.mybatis:mybatis:3.5.6'
 }
 
 application {
