--- a/bitcamp-project-server/app/src/main/webapp/WEB-INF/web.xml
+++ b/bitcamp-project-server/app/src/main/webapp/WEB-INF/web.xml
@@ -4,19 +4,21 @@
   xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
   version="4.0">
-    
-  <display-name>bitcamp-project-server</display-name>
-    
+  
+  <display-name>mini-pms-server</display-name>
+
+<!-- 리스너, 필터, 서블릿이 공동으로 사용할 초기화 파라미터 설정 -->
   <context-param>
     <param-name>mybatis-config</param-name>
     <param-value>com/eomcs/pms/conf/mybatis-config.xml</param-value>
   </context-param>
-    
+
 <!-- 리스너 등록 -->
   <listener>
     <listener-class>com.eomcs.pms.web.listener.ContextLoaderListener</listener-class>
   </listener>
-  
+
+<!-- 필터 등록 및 필터를 적용할 URL 설정 -->
   <filter>
     <filter-name>CharacterEncodingFilter</filter-name>
     <filter-class>com.eomcs.pms.web.filter.CharacterEncodingFilter</filter-class>
@@ -29,9 +31,9 @@
     <filter-name>CharacterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-
-  <!-- 서블릿 등록 및 서블릿의 URL 설정 -->
-  <!-- 
+      
+<!-- 서블릿 등록 및 서블릿의 URL 설정 -->
+<!--  
   <servlet>
     <servlet-name>AppInitHandler</servlet-name>
     <servlet-class>com.eomcs.pms.web.AppInitHandler</servlet-class>
@@ -41,7 +43,8 @@
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
- -->
+-->
+        
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 		<welcome-file>index.htm</welcome-file>
@@ -50,4 +53,5 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
+	
 </web-app>
