--- a/bitcamp-project-server/app/build.gradle
+++ b/bitcamp-project-server/app/build.gradle
@@ -16,7 +16,7 @@ tasks.withType(JavaCompile) {
 
 eclipse {
     project {
-        name = "bitcamp-project-server"
+        name = "mini-pms-server"
     }
 }
 
@@ -41,13 +41,33 @@ dependencies {
     //implementation 'commons-fileupload:commons-fileupload:1.4'
   
     // 웹 애플리케이션을 제작할 때 사용하는 Servlet/JSP 라이브러리
-    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    // - 서블릿 API 는 서블릿 컨테이너에 존재하기 때문에 컴파일 하는 동안에만 사용한다.
+    // - 배포에서는 제외한다.
+    providedCompile 'javax.servlet:javax.servlet-api:4.0.1'
  
+    // JSTL API 구현체
+    implementation 'javax.servlet:jstl:1.2'
+    
+    // Spring WebMVC 프레임워크
+    implementation 'org.springframework:spring-webmvc:5.3.7'
+    
     // MariaDB JDBC 드라이버
     implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
     
     // Mybatis 퍼시스턴스 프레임워크
     implementation 'org.mybatis:mybatis:3.5.6'
+  
+    // Spring JDBC 관련 라이브러리
+    implementation 'org.springframework:spring-jdbc:5.3.7'
+    
+    // Mybatis와 Spring을 중계하는 역할을 하는 라이브러리
+    // - 이 라이브러리가 있어야만 스프링 컨테이너에서 
+    // SqlSessionFactory 객체를 자동생성할 수 있다. 
+    implementation 'org.mybatis:mybatis-spring:2.0.6'
+    
+    // log4j 라이브러리
+    // - 이 라이브러리는 프로그램을 실행하는 동안 .log 파일에 기록을 남기는 일을 한다. 
+    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
     
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.guava:guava:29.0-jre'
